# stock-monitor-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGILE_DEVELOPMENT.md  CHANGELOG.md  CHANGELOG_CRON_FIX.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FASTAPI_MIGRATION.md  GIT_WORKFLOW.md  LICENSE  LOGS_CLEANUP_REPORT.md  MEMORY.md  Makefile  OPTIMIZATION_SUMMARY.md  POSTMORTEM_20260326.md  PREDICTION_REAL_DATA_REPORT.md  PROJECT_STRUCTURE.md  PUSH_INVESTIGATION_REPORT.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  REFACTOR_TEST_REPORT.md  ROADMAP.md  SPRINT_3_PLAN.md  SPRINT_REPORTS.md  TECH_STACK.md  TESTING.md  VERIFY_TOMORROW_PUSH.md  cron_install.sh  feishu_config.example.json  gold_config.json  gold_monitor.py  install_alert_cron.sh  install_gold_cron.sh  install_push_cron.sh  multi_stocks_monitor.py  (+6 more)
.claude/: CLAUDE.md
app/: __init__.py  main.py
archive/: PROJECT_STRUCTURE.md  README.md  app.py  cron_prediction_push.py  verify_predictions.py
config/: crontab.template  feishu_config.example.json  gold_config.json  stocks_config.example.json  stocks_config.json
data/: prediction_history.json  zte_monitor.db
output/: feishu_message.txt  prediction_000063.txt  price_alert.txt  stock_000001.txt  stock_000002.txt  stock_000063.txt  stock_000858.txt  stock_300750.txt  stock_600519.txt  stock_601318.txt
scripts/: __init__.py  config_loader.py  gold_monitor.py  install_crontab.sh  logging_config.py  multi_stocks_monitor.py  prediction_push.py  price_alert_monitor.py  stock_predictor.py  verify_predictions.py  verify_push.sh
src/: __init__.py  config_loader.py  feishu.py  gold_service.py  logging_config.py  (+2 more)
(+49 files in other folders)
